[package]
name = "fractals-wasm"
version = "0.1.0"
authors = ["0xffset <roggergarciadiaz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = [
  "console",
  "ImageData",
  "CanvasRenderingContext2d",
      "HtmlAnchorElement", # 👈 Necesario para tu caso

  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Performance",
] }
wasm-bindgen-futures = "0.4.34"
futures = "0.3.28"
num-complex = "0.4.3"
getrandom = { version = "0.2.10", features = ["js"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "z"
lto = true

